--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-pydantic>=1.8.0
-python-multipart>=0.0.5
-pandas>=1.3.0
-google-cloud-bigquery>=2.34.0
-google-auth>=2.0.0
+fastapi==0.104.1
+uvicorn==0.24.0
+elasticsearch==8.10.1
+nltk==3.8.1
+pandas==2.1.3
+python-dotenv==1.0.0
+google-cloud-aiplatform==1.36.4
+vertexai==0.0.1
